
2017-04-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobol85/Makefile.am: HACK for newcob.val in sourcedir during VPATH build

2017-03-22  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added Error/Warning summary to listings.

2017-03-21  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Changed variable indentation and redefines.

2017-03-19  Edward Hart <edward.dan.hart@gmail.com>

	* report.pl, EXEC85.conf.in: fixed bug #363: redefining filename (viz.
	  "report.log") as variable is not portable.
	* report.pl, summary.pl: fixed warnings and added "use warnings;" and
	  "use strict;" directives.

2017-03-19  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added multiple files listing test.

2017-02-21  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Fixed to pass internal cross reference.

2017-02-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_file.at: fixed generation with old autoconf
	  that trips on the string AT_DATA in AT_DATA definitions

2017-01-20  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/run_misc.at: add PROCEDURE DIVISION EXTERN test

2017-01-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.at: minimized the output of testsuite --version while adding
	  core authors to it

2017-01-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobol85/report.pl: replaced fifo by sysin redirection and
	  new kill sequence

2016-12-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobol85/report.pl: fixing running the suite from shared file systems by
	  moving fifo to tempdir (where creation of fifo should always be possible)
	* cobol85/report.pl, cobol85/NC.txt: automated "manual investigations"
	* cobol85/report.pl: moved test specific compilation flags to $cobc_flags
	  and show them on command line,
	  create report.log directly with test specific name

2016-12-14  Edward Hart <edward.dan.hart@gmail.com>
