@@ -3762,8 +3762,8 @@ AT_DATA([prog.cob], [
        01 CELL     USAGE BINARY-LONG.
        01 ARGC     USAGE BINARY-LONG.
        01 ARGV     USAGE POINTER.
-       01 ERRNO    USAGE POINTER.
-       01 ERR      USAGE BINARY-LONG BASED.
+       01 ERRPTR   USAGE POINTER.
+       01 ERRNO    USAGE BINARY-LONG BASED.
        01 TZNAME   USAGE POINTER.
        01 TZNAMES  USAGE POINTER BASED.
           05 TZS      USAGE POINTER OCCURS 2 TIMES.
@@ -3777,18 +3777,18 @@ AT_DATA([prog.cob], [
        CALL "CBL_GC_HOSTED" USING ARGC "argc" END-CALL
        CALL "CBL_GC_HOSTED" USING ARGV "argv" END-CALL
        CALL "CBL_GC_HOSTED" USING CELL "cell" END-CALL
-       CALL "CBL_GC_HOSTED" USING ERRNO "errno" END-CALL
+       CALL "CBL_GC_HOSTED" USING ERRPTR "errno" END-CALL
        CALL "CBL_GC_HOSTED" USING ARGC "arg" END-CALL
        CALL "CBL_GC_HOSTED" USING NULL "argc" END-CALL
-       SET ADDRESS OF ERR TO ERRNO
+       SET ADDRESS OF ERRNO TO ERRPTR
        CALL "CBL_GC_HOSTED" USING TZNAME "tzname" END-CALL
        CALL "CBL_GC_HOSTED" USING TIMEZONE "timezone" END-CALL
        CALL "CBL_GC_HOSTED" USING DAYLIGHT "daylight" END-CALL
 
        CALL "test_errno"
        END-CALL
-       IF ERR NOT EQUAL 2 THEN
-           DISPLAY "BAD ERRNO " ERR END-DISPLAY
+       IF ERRNO NOT EQUAL 2 THEN
+           DISPLAY "BAD ERRNO " ERRNO END-DISPLAY
        END-IF
 
        IF ARGC NOT EQUAL 2 THEN
@@ -3811,9 +3811,6 @@ AT_DATA([prog.cob], [
            IF TZS(1) EQUAL NULL THEN
                DISPLAY "BAD TZNAME" END-DISPLAY
            END-IF
-       END-IF
-       IF DAYLIGHT NOT EQUAL 0 AND 1 THEN
-           DISPLAY "BAD DAYLIGHT" DAYLIGHT END-DISPLAY
        END-IF
 
        *> Test assumes return-code will be 3, chars output by last fprintf
