@@ -1,4 +1,10 @@
 
+2017-04-25  Brian Tiffin <btiffin@gnu.org>
+
+	* testsuite.src/run_extensions.at: Drop daylight value test, zero means no
+	  rule exists, non-zero means rule exists, testing for bad value is
+	  pointless.
+
 2017-04-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* cobol85/Makefile.am: HACK for newcob.val in sourcedir during VPATH build
